--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,25 @@ html, body {
 .navbar {
   border-bottom: 3px solid #008ed6;
   opacity: 0.8; }
+
+#home {
+  background: url("../../img/home.jpg") no-repeat center center/cover;
+  background-attachment: fixed;
+  min-height: 80vh;
+  position: relative;
+  /*
+    for overlay images
+    */ }
+  #home .home__container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    background: rgba(0, 0, 0, 0.7); }
+    #home .home__container .home__content {
+      padding-top: 7rem; }
+      #home .home__container .home__content .card-form {
+        opacity: 0.7; }
+        #home .home__container .home__content .card-form .form-group, #home .home__container .home__content .card-form button {
+          margin-top: 0.5rem; }
