--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
   background-color: #333;
-  color: #fff; }
+  color: #fff;
+  scroll-behavior: smooth; }
 
 .navbar {
   border-bottom: 3px solid #008ed6;
