--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -2,4 +2,6 @@ html, body{
     font-family: 'Open Sans', sans-serif;
     background-color: $color-dark;
     color: $color-light;
+
+    scroll-behavior: smooth;
 }
